--- a/styles/styles.css
+++ b/styles/styles.css
@@ -143,6 +143,8 @@ nav > ul a {
   background: transparent
     url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
   background-repeat: repeat;
+  -webkit-animation: bg-animation 0.2s infinite;
+  -webkit-opacity: 0.9;
   animation: bg-animation 0.2s infinite;
   opacity: 0.9;
   visibility: visible;
@@ -150,6 +152,42 @@ nav > ul a {
 }
 
 @keyframes bg-animation {
+  0% {
+    transform: translate(0, 0);
+  }
+  10% {
+    transform: translate(-5%, -5%);
+  }
+  20% {
+    transform: translate(-10%, 5%);
+  }
+  30% {
+    transform: translate(5%, -10%);
+  }
+  40% {
+    transform: translate(-5%, 15%);
+  }
+  50% {
+    transform: translate(-10%, 5%);
+  }
+  60% {
+    transform: translate(15%, 0);
+  }
+  70% {
+    transform: translate(0, 10%);
+  }
+  80% {
+    transform: translate(-15%, 0);
+  }
+  90% {
+    transform: translate(10%, 5%);
+  }
+  100% {
+    transform: translate(5%, 0);
+  }
+}
+
+@-webkit-keyframes bg-animation {
   0% {
     transform: translate(0, 0);
   }
