--- a/styles/styles.css
+++ b/styles/styles.css
@@ -144,8 +144,8 @@ nav > ul a {
     url('http://assets.iceable.com/img/noise-transparent.png') repeat 0 0;
   background-repeat: repeat;
   -webkit-animation: bg-animation 0.2s infinite;
-  -webkit-opacity: 0.9;
   animation: bg-animation 0.2s infinite;
+  -webkit-opacity: 0.9;
   opacity: 0.9;
   visibility: visible;
   z-index: -9;
@@ -189,37 +189,37 @@ nav > ul a {
 
 @-webkit-keyframes bg-animation {
   0% {
-    transform: translate(0, 0);
+    -webkit-transform: translate(0, 0);
   }
   10% {
-    transform: translate(-5%, -5%);
+    -webkit-transform: translate(-5%, -5%);
   }
   20% {
-    transform: translate(-10%, 5%);
+    -webkit-transform: translate(-10%, 5%);
   }
   30% {
-    transform: translate(5%, -10%);
+    -webkit-transform: translate(5%, -10%);
   }
   40% {
-    transform: translate(-5%, 15%);
+    -webkit-transform: translate(-5%, 15%);
   }
   50% {
-    transform: translate(-10%, 5%);
+    -webkit-transform: translate(-10%, 5%);
   }
   60% {
-    transform: translate(15%, 0);
+    -webkit-transform: translate(15%, 0);
   }
   70% {
-    transform: translate(0, 10%);
+    -webkit-transform: translate(0, 10%);
   }
   80% {
-    transform: translate(-15%, 0);
+    -webkit-transform: translate(-15%, 0);
   }
   90% {
-    transform: translate(10%, 5%);
+    -webkit-transform: translate(10%, 5%);
   }
   100% {
-    transform: translate(5%, 0);
+    -webkit-transform: translate(5%, 0);
   }
 }
 
